Initial SOAP web service implementation with company detail service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=companyservice
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/
+
+# Application Name
+spring.application.name=company-soap-service
+
+# SOAP Web Service Configuration
+spring.ws.path=/ws
+
+# Logging Configuration
+logging.level.org.springframework.ws=DEBUG
+logging.level.com.abc.cmpinfo=DEBUG
+logging.level.root=INFO
+
+# Enable SOAP message logging
+logging.level.org.springframework.ws.server.MessageTracing.sent=TRACE
+logging.level.org.springframework.ws.server.MessageTracing.received=TRACE
+
